Final project updates before deployment